ZoomBubbleView accessibility fixes

Don't close the ZoomBubbleView on timeout if one of the buttons inside
it has focus. (The bubble doesn't close on timeout if the mouse is
inside the bubble; screenreaders should have the same experience).

Also add an accessible title (read with Insert+T on JAWS and NVDA).

Bug: 849486
Test: ZoomBubbleBrowserTest.FocusPreventsClose

Change-Id: Idbe2e46ab0c6d896691850ff6fee5a843abee2f9
Reviewed-on: https://chromium-review.googlesource.com/1189044
Reviewed-by: Evan Stade <estade@chromium.org>
Commit-Queue: James Wallace-Lee <jamwalla@chromium.org>
Cr-Commit-Position: refs/heads/master@{#589673}
Former-commit-id: c4cb73ecadad6fcb2536101a227c55e114017e5e