chrome/browser/ui/views/location_bar/zoom_bubble_view.h
@@ -56,6 +56,7 @@ class ZoomBubbleView : public LocationBarBubbleDelegateView,
   FRIEND_TEST_ALL_PREFIXES(ZoomBubbleBrowserTest, ImmersiveFullscreen);
   FRIEND_TEST_ALL_PREFIXES(ZoomBubbleBrowserTest,
                            BubbleSuppressingExtensionRefreshesExistingBubble);
+  FRIEND_TEST_ALL_PREFIXES(ZoomBubbleBrowserTest, FocusPreventsClose);
 
   // Returns true if we can reuse the existing bubble for the given
   // |web_contents|.
@@ -92,8 +93,13 @@ class ZoomBubbleView : public LocationBarBubbleDelegateView,
   ~ZoomBubbleView() override;
 
   // LocationBarBubbleDelegateView:
+  View* GetInitiallyFocusedView() override;
+  base::string16 GetAccessibleWindowTitle() const override;
   int GetDialogButtons() const override;
+  void OnFocus() override;
+  void OnBlur() override;
   void OnGestureEvent(ui::GestureEvent* event) override;
+  void OnKeyEvent(ui::KeyEvent* event) override;
   void OnMouseEntered(const ui::MouseEvent& event) override;
   void OnMouseExited(const ui::MouseEvent& event) override;
   void Init() override;
@@ -135,7 +141,7 @@ class ZoomBubbleView : public LocationBarBubbleDelegateView,
   static ZoomBubbleView* zoom_bubble_;
 
   // Timer used to auto close the bubble.
-  base::OneShotTimer timer_;
+  base::OneShotTimer auto_close_timer_;
 
   // Timer duration that is made longer if a user presses + or - buttons.
   base::TimeDelta auto_close_duration_;
